2006-02-01  Titus Brown  <t@issola.caltech.edu>

	* Added ignore_errors functioning into wwwsearch code; now, when
	  ignore_errors=True on form parsing, parse errors are ignored.

	* Renamed 'do_run_tidy' to 'use_tidy', and 'tidy_should_exist' to
	  'require_tidy'.

	* Fixed redirect error once and for all by switching to using the
	  *correct* Request class.

2006-01-23  Titus Brown  <t@issola.caltech.edu>

	* Added extensions/ __init__.py

	* Removed special setup cmdclass.

2006-01-22  Titus Brown  <t@issola.caltech.edu>

	* Removed space mangling in favor of JJL's fix in mechanize.

	* Fixed multiple 'showlinks' problem (in _mechanize.py).

	* Catch all parsing exceptions. (Kieran Holland)

	* Added return values to a number of functions in commands.py,
	  documented appropriately.

	* Added '?' behavior for 'go', so that 'go ?name=value' works.
	  (Sebastjan Trepca)

	* Updated pyparsing to 1.4p1 version.

	* Updated mechanize/ClientCookie/ClientForm.

	* Removed ez_setup dependency.

2005-12-19  Titus Brown  <t@issola.caltech.edu>

	* Added tv@debian.org's 'find' regexp flags patch.

	* Added tv@debian.org's quoted patch.

	* Added tv@debian.org's patch to widen showforms field names.

	* Added tv@debian.org's patch to fix checkbox/submit multiplicity
	  errors.

	* Added Jason Pellerin's tests patch.

2005-12-11  Titus Brown  <t@issola.caltech.edu>

	* Added twill.get_browser(); deprecated twill.get_browser_state().

	* Broke mechanize stuff out into _browser.py.

	* Removed browser.url() in favor of get_url().

2005-12-10  Titus Brown  <t@issola.caltech.edu>

	* RELEASE 0.8.1.

	* Added Tom Parker's patch for multiple identical submit buttons.

2005-12-08  Titus Brown  <t@issola.caltech.edu>

	* fixed wsgi_intercept start_response params: added exc_info.

	* added 'sleep' argument to TestInfo init.

2005-12-06  Titus Brown  <t@issola.caltech.edu>

	* Added sureshvv's commands in as 'match_parse' extension.
